--- a/pylaform/templates/base.html
+++ b/pylaform/templates/base.html
@@ -10,16 +10,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     {% set ns = namespace(title="Welcome") %}
     {% for item in payload %}
-        {% if item['attr'] == 'name' %}
-            {% if item['value'] is defined %}
-                {% set ns.title = item['value'] %}
+        {% if item["attr"] == "name" %}
+            {% if item["value"] is defined %}
+                {% set ns.title = item["value"] %}
             {% endif %}
         {% endif %}
     {% endfor %}
     <title>{{ ns.title }}</title>
 </head>
 <body>
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='/styles/theme.scss') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for("static", filename="/styles/theme.scss") }}">
 
     <div class="container-fluid">
         <div class="row flex-nowrap">
