--- a/pylaform/templates/certifications_iter.html
+++ b/pylaform/templates/certifications_iter.html
@@ -1,5 +1,5 @@
 {% macro form_group(id, certification, year, state) %}
-    {% set id_end = "" %}
+    <!-- Test if new template element -->
     {% if id == "new" %}
         {% set id = "new` + clicks + `"|safe %}
     {% endif %}
