--- a/pylaform/templates/employment_iter.html
+++ b/pylaform/templates/employment_iter.html
@@ -1,4 +1,5 @@
 {% macro form_group(employerid, employer, location, employerstate, positionid, position, startdate, enddate, positionstate) %}
+    <!-- Test if new template element -->
     {% if employerid == "new" %}
         {% set employerid = "new` + clicks + `"|safe %}
         {% set positionid = "new` + clicks + `"|safe %}
@@ -10,12 +11,12 @@
                     <label for="{{ employerid }}_employer">Employer Name</label>
                     <br>
                     <input type="text" name="{{ employerid }}_employer" id="{{ employerid }}_employer"
-                           value="{{ employer if employer is defined else '' }}">
+                           value="{{ employer if employer is defined else "" }}">
                     <br>
                     <label for="{{ employerid }}_employer">Employer Location</label>
                     <br>
                     <input type="text" name="{{ employerid }}_location" id="{{ employerid }}_location"
-                           value="{{ location if location is defined else '' }}">
+                           value="{{ location if location is defined else "" }}">
                     <br>
                     <label for="{{ employerid }}_employer_enabled">Displayed</label>
                     <input type="checkbox" name="{{ employerid }}_employer_enabled"
@@ -25,18 +26,18 @@
                     <label for="{{ positionid }}_position">Position Held</label>
                     <br>
                     <input type="text" name="{{ positionid }}_position" id="{{ positionid }}_position"
-                           value="{{ position if position is defined else '' }}">
+                           value="{{ position if position is defined else "" }}">
                 </td>
                 <td>
                     <label for="{{ positionid }}_startdate">Start Date</label>
                     <br>
                     <input type="text" name="{{ positionid }}_startdate" id="{{ positionid }}_startdate"
-                           value="{{ startdate if startdate is defined else '' }}">
+                           value="{{ startdate if startdate is defined else "" }}">
                     <br>
                     <label for="{{ positionid }}_enddate">End Date</label>
                     <br>
                     <input type="text" name="{{ positionid }}_enddate" id="{{ positionid }}_enddate"
-                           value="{{ enddate if enddate is defined else '' }}">
+                           value="{{ enddate if enddate is defined else "" }}">
                     <br>
                     <label for="{{ positionid }}_enddate_enabled">Displayed</label>
                     <input type="checkbox" name="{{ positionid }}_enddate_enabled"
