--- a/pylaform/templates/skills_iter.html
+++ b/pylaform/templates/skills_iter.html
@@ -1,6 +1,5 @@
 {% macro form_group(id, category, subcategory, employer, position, shortdesc, longdesc, state) %}
-
-    {% set id_end = "" %}
+    <!-- Test if new template element -->
     {% if id == "new" %}
         {% set id = "new` + clicks + `"|safe %}
     {% endif %}
@@ -11,25 +10,25 @@
                     <label for="{{ id }}_category">Category</label>
                     <br>
                     <input type="text" name="{{ id }}_category" id="{{ id }}_category"
-                           value="{{ category if category is defined else '' }}">
+                           value="{{ category if category is defined else "" }}">
                 </td>
                 <td class="align-items-center">
                     <label for="{{ id }}_subcategory">Subcategory</label>
                     <br>
                     <input type="text" name="{{ id }}_subcategory" id="{{ id }}_subcategory"
-                           value="{{ subcategory if subcategory is defined else '' }}">
+                           value="{{ subcategory if subcategory is defined else "" }}">
                 </td>
                 <td>
 
                     <label for="{{ id }}_employer">Employer</label>
                     <br>
                     <input type="text" name="{{ id }}_employer" id="{{ id }}_employer"
-                           value="{{ employer if employer is defined else '' }}">
+                           value="{{ employer if employer is defined else "" }}">
                     <br>
                     <label for="{{ id }}_position">Position</label>
                     <br>
                     <input type="text" name="{{ id }}_position" id="{{ id }}_position"
-                           value="{{ position if position is defined else '' }}">
+                           value="{{ position if position is defined else "" }}">
                 </td>
                 <td>
                     <button class="btn btn-danger"
@@ -47,7 +46,7 @@
             <label for="{{ id }}_shortdesc">Short Description</label>
             <br>
             <input type="text" name="{{ id }}_shortdesc" id="{{ id }}_shortdesc"
-                   value="{{ shortdesc if shortdesc is defined else '' }}">
+                   value="{{ shortdesc if shortdesc is defined else "" }}">
         </li>
     </ul>
     <ul>
@@ -55,7 +54,7 @@
             <label for="{{ id }}_longdesc">Long Description</label>
             <br>
             <input type="text" name="{{ id }}_longdesc" id="{{ id }}_longdesc"
-                   value="{{ longdesc if longdesc is defined else '' }}">
+                   value="{{ longdesc if longdesc is defined else "" }}">
             <br>
             <label for="{{ id }}_longdesc_enabled">Displayed</label>
             <input type="checkbox" name="{{ id }}_longdesc_enabled"
