--- a/pylaform/templates/education_index.html
+++ b/pylaform/templates/education_index.html
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="lead d-flex align-items-bottom justify-content-center">
         <form method="post">
+            <!-- Iterate payload -->
         {% for i in payload %}
             {% if i|length > 0 %}
                 {{ form_group(i["school"], i["schoolname"], i["schoolstate"], i["location"], i["focusid"], i["focus"], i["startdate"], i["enddate"], i["focusstate"]) }}
@@ -26,11 +27,11 @@
         $("#rowAdder").click(function () {
             clicks += 1;
             newRowAdd = `{{ form_group("new", "", true, "", "", "", "", "", true) }}`;
-            $('#newinput').append(newRowAdd);
+            $("#newinput").append(newRowAdd);
         });
         $("body").on("click", "#deleteRow", function () {
-            div_id = $(this).closest('div').attr('id');
-            $('#' + div_id).remove();
+            div_id = $(this).closest("div").attr("id");
+            $("#" + div_id).remove();
             $("#newinput").append(`<input type="hidden" id="` + div_id + `_delete" name="` + div_id + `_delete" value="True">`);
         });
     </script>
