--- a/pylaform/templates/glossary_iter.html
+++ b/pylaform/templates/glossary_iter.html
@@ -1,5 +1,5 @@
 {% macro form_group(id, term, url, description, state) %}
-    {% set id_end = "" %}
+    <!-- Test if new template element -->
     {% if id == "new" %}
         {% set id = "new` + clicks + `"|safe %}
     {% endif %}
@@ -11,7 +11,7 @@
                     <br>
                     <input type="text" name="{{ id }}_term"
                               id="{{ id }}_term"
-                              value="{{ term if term is defined else '' }}">
+                              value="{{ term if term is defined else "" }}">
                     <br>
                     <label for="{{ id }}_term">Term</label>
                     <br>
@@ -19,7 +19,7 @@
                               id="{{ id }}_url"
                               rows="1"
                               cols="80"
-                    >{{ url if url is defined else '' }}</textarea>
+                    >{{ url if url is defined else "" }}</textarea>
                     <br>
                     <label for="{{ id }}_term"URL</label>
                     <br>
@@ -27,7 +27,7 @@
                               id="{{ id }}_description"
                               rows="2"
                               cols="80"
-                    >{{ description if description is defined else '' }}</textarea>
+                    >{{ description if description is defined else "" }}</textarea>
                     <br>
                     <label for="{{ id }}_description_enabled">Displayed</label>
                     <input type="checkbox" name="{{ id }}_description_enabled"
