--- a/pylaform/templates/summary_index.html
+++ b/pylaform/templates/summary_index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="lead d-flex align-items-bottom justify-content-center">
         <form method="post">
-
+            <!-- Iterate payload -->
         {% for i in payload %}
             {{ form_group(i["id"], i["shortdesc"], i["longdesc"], i["state"]) }}
         {% endfor %}
@@ -28,8 +28,8 @@
             $('#newinput').append(newRowAdd);
         });
         $("body").on("click", "#deleteRow", function () {
-            div_id = $(this).closest('div').attr('id');
-            $('#' + div_id).remove();
+            div_id = $(this).closest("div").attr("id");
+            $("#" + div_id).remove();
             $("#newinput").append(`<input type="hidden" id="` + div_id + `_delete" name="` + div_id + `_delete" value="True">`);
         });
     </script>
