--- a/pylaform/templates/education_index.html
+++ b/pylaform/templates/education_index.html
@@ -14,7 +14,7 @@
                         <span class="bi bi-plus-square-dotted">
                         </span> ADD
                     </button>
-        <button type="submit" type="button" class="btn btn-success">
+        <button type="submit" class="btn btn-success">
                         <span class="bi bi-plus-square-dotted">
                         </span> SUBMIT
                     </button>
