--- a/pylaform/templates/education_iter.html
+++ b/pylaform/templates/education_iter.html
@@ -13,7 +13,7 @@
                     <input type="text" name="{{ schoolid }}_school" id="{{ schoolid }}_school"
                            value="{{ school if school is defined else "" }}">
                     <br>
-                    <label for="{{ schoolid }}_school">School Location</label>
+                    <label for="{{ schoolid }}_location">School Location</label>
                     <br>
                     <input type="text" name="{{ schoolid }}_location" id="{{ schoolid }}_location"
                            value="{{ location if location is defined else "" }}">
