--- a/pylaform/templates/employment_iter.html
+++ b/pylaform/templates/employment_iter.html
@@ -13,7 +13,7 @@
                     <input type="text" name="{{ employerid }}_employer" id="{{ employerid }}_employer"
                            value="{{ employer if employer is defined else "" }}">
                     <br>
-                    <label for="{{ employerid }}_employer">Employer Location</label>
+                    <label for="{{ employerid }}_location">Employer Location</label>
                     <br>
                     <input type="text" name="{{ employerid }}_location" id="{{ employerid }}_location"
                            value="{{ location if location is defined else "" }}">
