--- a/pylaform/templates/information.html
+++ b/pylaform/templates/information.html
@@ -30,7 +30,7 @@
                 </tr>
             {% endfor %}
         </table>
-        <button type="submit" type="button" class="btn btn-success">
+        <button type="submit" class="btn btn-success">
                 <span class="bi bi-plus-square-dotted">
                 </span> SUBMIT
         </button>
