--- a/pylaform/templates/achievements_iter.html
+++ b/pylaform/templates/achievements_iter.html
@@ -21,7 +21,7 @@
                            value="{{ position if position is defined else "" }}">
                 </td>
                 <td>
-                    <label for="{{ position }}_position_enabled">Displayed</label>
+                    <label for="{{ achievementid }}_position_enabled">Displayed</label>
                     <input type="checkbox" name="{{ achievementid }}_position_enabled"
                     {{ "checked" if positionstate }}>
                 </td>
@@ -40,7 +40,7 @@
                            value="{{ longdesc if longdesc is defined else "" }}">
                     <br>
                     <label for="{{ achievementid }}_longdesc_enabled">Displayed</label>
-                    <input type="checkbox" name="{{ achievementid }}_enddate_enabled"
+                    <input type="checkbox" name="{{ achievementid }}_longdesc_enabled"
                             {{ "checked" if achievementstate }}>
                 </td>
                 <td>
