--- a/pylaform/templates/glossary_iter.html
+++ b/pylaform/templates/glossary_iter.html
@@ -3,7 +3,7 @@
     {% if id == "new" %}
         {% set id = "new` + clicks + `"|safe %}
     {% endif %}
-    <div id="{{ id }}" key="{{ id }}" class="d-flex align-items-bottom justify-content-center">
+    <div id="{{ id }}" class="d-flex align-items-bottom justify-content-center">
         <table>
             <tr>
                 <td>
@@ -13,7 +13,7 @@
                               id="{{ id }}_term"
                               value="{{ term if term is defined else "" }}">
                     <br>
-                    <label for="{{ id }}_term">Term</label>
+                    <label for="{{ id }}_url">URL</label>
                     <br>
                     <textarea name="{{ id }}_url"
                               id="{{ id }}_url"
@@ -21,7 +21,7 @@
                               cols="80"
                     >{{ url if url is defined else "" }}</textarea>
                     <br>
-                    <label for="{{ id }}_term"URL</label>
+                    <label for="{{ id }}_description">Description</label>
                     <br>
                     <textarea name="{{ id }}_description"
                               id="{{ id }}_description"
