--- a/pylaform/templates/education_index.html
+++ b/pylaform/templates/education_index.html
@@ -6,9 +6,10 @@
             <!-- Iterate payload -->
         {% for i in payload %}
             {% if i|length > 0 %}
-                {{ form_group(i["school"], i["schoolname"], i["schoolstate"], i["location"], i["focusid"], i["focus"], i["startdate"], i["enddate"], i["focusstate"]) }}
+                {{ form_group(payload, i["school"], i["schoolname"], i["location"], i["schoolstate"], i["focusid"], i["focus"], i["startdate"], i["enddate"], i["focusstate"]) }}
             {% endif %}
         {% endfor %}
+
         <div id="newinput"></div>
         <button id="rowAdder" type="button" class="btn btn-dark">
                         <span class="bi bi-plus-square-dotted">
@@ -26,7 +27,7 @@
         clicks = 0;
         $("#rowAdder").click(function () {
             clicks += 1;
-            newRowAdd = `{{ form_group("new", "", true, "", "", "", "", "", true) }}`;
+            newRowAdd = `{{ form_group(payload, "new", "", "", true, "", "", "", "", true, hidden=False) }}`;
             $("#newinput").append(newRowAdd);
         });
         $("body").on("click", "#deleteRow", function () {
@@ -35,4 +36,5 @@
             $("#newinput").append(`<input type="hidden" id="` + div_id + `_delete" name="` + div_id + `_delete" value="True">`);
         });
     </script>
+    {% include "_scripts.html" %}
 {% endblock %}
