--- a/pylaform/templates/education_iter.html
+++ b/pylaform/templates/education_iter.html
@@ -1,4 +1,5 @@
-{% macro form_group(schoolid, school, schoolstate, location, focusid, focus, startdate, enddate, focusstate) %}
+{% from "_dropdown.html" import drop_down with context %}
+{% macro form_group(payload, schoolid, schoolname, location, schoolstate, focusid, focus, startdate, enddate, focusstate, hidden=True) %}
     <!-- Test if new template element -->
     {% if schoolid == "new" %}
         {% set schoolid = "new` + clicks + `"|safe %}
@@ -8,25 +9,33 @@
         <table>
             <tr>
                 <td>
-                    <label for="{{ schoolid }}_school">School Name</label>
-                    <br>
-                    <input type="text" name="{{ schoolid }}_school" id="{{ schoolid }}_school"
-                           value="{{ school if school is defined else "" }}">
-                    <br>
-                    <label for="{{ schoolid }}_location">School Location</label>
-                    <br>
-                    <input type="text" name="{{ schoolid }}_location" id="{{ schoolid }}_location"
-                           value="{{ location if location is defined else "" }}">
+                    {{ drop_down(schoolid, payload, "school") }}
+                    <div class="{{ "d-none updatevalue" if hidden else "updatevalue" }}" id="{{ schoolid }}_school_div">
+                        <br>
+                        <input type="text" name="{{ schoolid }}_school" id="{{ schoolid }}_school"
+                               value="{{ schoolname if schoolname is defined else "" }}" onfocusout="commit_value('{{ schoolid }}_school');">
+                        <br>
+                        <label for="{{ schoolid }}_location">School Location</label>
+                        <br>
+                        <input type="text" name="{{ schoolid }}_location" id="{{ schoolid }}_location"
+                               value="{{ location if location is defined else "" }}" onfocusout="commit_value('{{ schoolid }}_location');">
+                    </div>
                     <br>
                     <label for="{{ schoolid }}_school_enabled">Displayed</label>
                     <input type="checkbox" name="{{ schoolid }}_school_enabled"
                     {{ "checked" if schoolstate }}>
                 </td>
                 <td class="align-items-center">
-                    <label for="{{ focusid }}_focus">Study Focus</label>
+                    {{ drop_down(focusid, payload, "school", secondary="focus", secondarybyname=True) }}
+                    <div class="{{ "d-none updatevalue" if hidden else "updatevalue" }}" id="{{ focusid }}_focus_div">
+                        <br>
+                        <input type="text" name="{{ focusid }}_focus" id="{{ focusid }}_focus"
+                               value="{{ focus if focus is defined else "" }}" onfocusout="commit_value('{{ focusid }}_school');">
+                    </div>
                     <br>
-                    <input type="text" name="{{ focusid }}_focus" id="{{ focusid }}_focus"
-                           value="{{ focus if focus is defined else "" }}">
+                    <label for="{{ focusid }}_enddate_enabled">Displayed</label>
+                    <input type="checkbox" name="{{ focusid }}_enddate_enabled"
+                            {{ "checked" if focusstate }}>
                 </td>
                 <td>
                     <label for="{{ focusid }}_startdate">Start Date</label>
@@ -38,10 +47,6 @@
                     <br>
                     <input type="text" name="{{ focusid }}_enddate" id="{{ focusid }}_enddate"
                            value="{{ enddate if enddate is defined else "" }}">
-                    <br>
-                    <label for="{{ focusid }}_enddate_enabled">Displayed</label>
-                    <input type="checkbox" name="{{ focusid }}_enddate_enabled"
-                            {{ "checked" if focusstate }}>
                 </td>
                 <td>
                     <button class="btn btn-danger"
