--- a/pylaform/templates/skills_iter.html
+++ b/pylaform/templates/skills_iter.html
@@ -1,4 +1,5 @@
-{% macro form_group(id, category, subcategory, employer, position, shortdesc, longdesc, state) %}
+{% from "_dropdown.html" import drop_down with context %}
+{% macro form_group(payload, id, category, subcategory, employername, position, shortdesc, longdesc, state, hidden=True) %}
     <!-- Test if new template element -->
     {% if id == "new" %}
         {% set id = "new` + clicks + `"|safe %}
@@ -7,28 +8,25 @@
         <table>
             <tr>
                 <td>
-                    <label for="{{ id }}_category">Category</label>
+                    {{ drop_down(id, payload, "category", primarybyname=True) }}
                     <br>
-                    <input type="text" name="{{ id }}_category" id="{{ id }}_category"
-                           value="{{ category if category is defined else "" }}">
+                    <div class="{{ "d-none" if hidden else "" }}" id="{{ id }}_category_div">
+                        <input type="text" name="{{ id }}_category" id="{{ id }}_category"
+                               value="{{ category if category is defined else "" }}">
+                    </div>
                 </td>
                 <td class="align-items-center">
-                    <label for="{{ id }}_subcategory">Subcategory</label>
-                    <br>
-                    <input type="text" name="{{ id }}_subcategory" id="{{ id }}_subcategory"
-                           value="{{ subcategory if subcategory is defined else "" }}">
+                    {{ drop_down(id, payload, "category", secondary="subcategory", primarybyname=True) }}
+                    <div class="{{ "d-none" if hidden else "" }}" id="{{ id }}_subcategory_div">
+                        <br>
+                        <input type="text" name="{{ id }}_subcategory" id="{{ id }}_subcategory"
+                               value="{{ subcategory if subcategory is defined else "" }}">
+                    </div>
                 </td>
                 <td>
-
-                    <label for="{{ id }}_employer">Employer</label>
+                    {{ drop_down(id, payload, "employer", extra=False) }}
                     <br>
-                    <input type="text" name="{{ id }}_employer" id="{{ id }}_employer"
-                           value="{{ employer if employer is defined else "" }}">
-                    <br>
-                    <label for="{{ id }}_position">Position</label>
-                    <br>
-                    <input type="text" name="{{ id }}_position" id="{{ id }}_position"
-                           value="{{ position if position is defined else "" }}">
+                    {{ drop_down(id, payload, "employer", "position", extra=False) }}
                 </td>
                 <td>
                     <button class="btn btn-danger"
